# telegram-message-processor-bot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yml
.github/workflows/: docker_release.yml  release.yml  release_matrix.json
main/: Cargo.toml
main/src/: main.rs
main/src/configuration/: mod.rs  util.rs
main/src/model/: mod.rs  types.rs  util.rs  yandex.rs
main/src/telegram_bot/: mod.rs
src/: main.rs
src/api/: mod.rs  util.rs
src/api/yandex/: api.rs  mod.rs  model_uri.rs  types.rs
src/configuration/: mod.rs  model.rs  telegram.rs  yandex_api.rs
src/model/: mod.rs  types.rs  yandex.rs
src/telegram_bot/: mod.rs
yandex_cloud_grpc_client/: Cargo.toml  build.rs
yandex_cloud_grpc_client/src/: lib.rs
