[package]
name = "yandex_cloud_grpc_client"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
tonic = {  version = "0.11.0", features = ["tls", "tls-roots", "gzip"] }

[build-dependencies]
tonic-build = "0.11.0"
walkdir = "2.5.0"
